k8s/alpha-analitycs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-analytics
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpha-analytics
  template:
    metadata:
      labels:
        app: alpha-analytics
    spec:
      containers:
        - name: app
          image: jairleo95/alpha-analytics:1.1.1
          ports:
            - containerPort: 8080
          # env:
          #   - name: MONGO_URL
          #     value: mongodb://mongo:27017/dev
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: alpha-analytics
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: alpha-analytics
