k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-analytics-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: alpha-analytics
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
